actualizacion swagger raspberry
